--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,23 +1,88 @@
-html {
-    scroll-behavior: smooth;
-}
-
 body {
-    background-color: rgba(250, 235, 215, 0.25);
+	background: #444;
+	font-family: sans-serif;
 }
 
-h1 {
-    color: cornflowerblue;
-    font-size: 3rem;
-}
-h2 {
-    color: cadetblue;
-    font-size: 2rem;
+.container {
+	width: 700px;
+	position: absolute;
+	display: flex;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
-a {
-    text-decoration: none;
-    color: cornflowerblue;
-    font-size: 1.5rem;
-    cursor: pointer;
+.container .card {
+	position: relative;
+	height: 0;
+}
+
+.container .card .face {
+	width: 300px;
+	height: 200px;
+	border-radius: 16px;
+	box-shadow:
+			10px 10px 20px rgba(0, 0, 0, 0.2),
+			-10px 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.container .card .face.face1 {
+	position: relative;
+	background: #333;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: -200px;
+	z-index: 1;
+	transform: translateY(100px);
+	transition: all 0.5s;
+}
+
+.container .card:hover .face.face1 {
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+	transform: translateY(0);
+	box-shadow:
+		0 0 20px rgba(255, 255, 255, 0.3),
+		-10px 0 80px rgba(255, 0, 255, 0.3),
+		10px 0 80px rgba(0, 255, 255, 0.3);
+}
+
+.container .card .face.face1 .content {
+	opacity: 0.2;
+	transition: 0.5s;
+	text-align: center;
+}
+
+.container .card:hover .face.face1 .content {
+	opacity: 1;
+}
+
+.container .card .face.face1 .content h3 {
+	font-size: 1em;
+	color: white;
+	text-align: center;
+}
+
+.container .card .face.face2 {
+	display: flex;
+	background: antiquewhite;
+	transform: translateY(-100px);
+	transition: all 0.5s;
+	opacity: 0;
+}
+
+.container .card:hover .face.face2 {
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	transform: translateY(0);
+	opacity: 1;
+}
+
+.container .card .face.face2 .content p {
+	margin-left: 8px;
+	font-size: 1em;
+	color: black;
 }
