--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,88 +1,63 @@
 body {
 	background: #444;
-	font-family: sans-serif;
 }
 
-.container {
-	width: 700px;
+.about_me {
+	/*border: 1px solid black;*/
 	position: absolute;
+	top: 300px;
+	left: 150px;
+	--HEIGHT: 200px;
+	--WIDTH: 300px;
+	height: var(--HEIGHT);
+	width: var(--WIDTH);
 	display: flex;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	justify-content: space-between;
-	flex-wrap: wrap;
-}
-
-.container .card {
-	position: relative;
-	height: 0;
-}
-
-.container .card .face {
-	width: 300px;
-	height: 200px;
-	border-radius: 16px;
-	box-shadow:
-			10px 10px 20px rgba(0, 0, 0, 0.2),
-			-10px 0 20px rgba(0, 0, 0, 0.2);
-}
-
-.container .card .face.face1 {
-	position: relative;
-	background: #333;
-	display: flex;
-	justify-content: center;
 	align-items: center;
-	margin-top: -200px;
-	z-index: 1;
-	transform: translateY(100px);
+}
+
+.card {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	border-radius: 16px;
 	transition: all 0.5s;
 }
 
-.container .card:hover .face.face1 {
+.card:hover {
+	height: 200%;
+	box-shadow:
+			0 0 50px rgba(255, 255, 255, 0.4),
+			10px 0 80px rgba(255, 0, 255, 0.2),
+			-10px 0 80px rgba(0, 255, 255, 0.3);
+}
+
+.card .face {
+	position: absolute;
+	height: var(--HEIGHT);
+	width: var(--WIDTH);
+	border-radius: 16px;
+}
+
+.card .top_face {
+	top: 0;
+	z-index: 1;
+	background: rgba(85, 142, 192);
+	transition: ease-in-out 0.5s;
+}
+
+.card .bottom_face {
+	bottom: 0;
+	z-index: 0;
+	background: rgb(128, 89, 89);
+	transition: ease-in-out 0.5s;
+}
+
+.card:hover .top_face {
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
-	transform: translateY(0);
-	box-shadow:
-		0 0 20px rgba(255, 255, 255, 0.3),
-		-10px 0 80px rgba(255, 0, 255, 0.3),
-		10px 0 80px rgba(0, 255, 255, 0.3);
 }
 
-.container .card .face.face1 .content {
-	opacity: 0.2;
-	transition: 0.5s;
-	text-align: center;
-}
-
-.container .card:hover .face.face1 .content {
-	opacity: 1;
-}
-
-.container .card .face.face1 .content h3 {
-	font-size: 1em;
-	color: white;
-	text-align: center;
-}
-
-.container .card .face.face2 {
-	display: flex;
-	background: antiquewhite;
-	transform: translateY(-100px);
-	transition: all 0.5s;
-	opacity: 0;
-}
-
-.container .card:hover .face.face2 {
+.card:hover .bottom_face {
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
-	transform: translateY(0);
-	opacity: 1;
-}
-
-.container .card .face.face2 .content p {
-	margin-left: 8px;
-	font-size: 1em;
-	color: black;
 }
