--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,23 @@
 body {
-	background: #444;
+	background: #353B43;
 }
 
 .about_me {
-	/*border: 1px solid black;*/
 	position: absolute;
 	top: 300px;
 	left: 150px;
+	--HEIGHT: 200px;
+	--WIDTH: 300px;
+	height: var(--HEIGHT);
+	width: var(--WIDTH);
+	display: flex;
+	align-items: center;
+}
+
+.experience {
+	position: absolute;
+	top: 300px;
+	left: 500px;
 	--HEIGHT: 200px;
 	--WIDTH: 300px;
 	height: var(--HEIGHT);
@@ -20,13 +31,16 @@ body {
 	height: 100%;
 	width: 100%;
 	border-radius: 16px;
+	box-shadow:
+			-4px -4px 10px rgba(100, 110, 130, 0.2),
+			4px 4px 10px rgba(50, 52, 58, 0.90);
 	transition: all 0.5s;
 }
 
 .card:hover {
 	height: 200%;
 	box-shadow:
-			0 0 50px rgba(255, 255, 255, 0.4),
+			0 0 50px rgba(255, 255, 255, 0.3),
 			10px 0 80px rgba(255, 0, 255, 0.2),
 			-10px 0 80px rgba(0, 255, 255, 0.3);
 }
@@ -41,23 +55,53 @@ body {
 .card .top_face {
 	top: 0;
 	z-index: 1;
-	background: rgba(85, 142, 192);
-	transition: ease-in-out 0.5s;
+	display: flex;
+	align-items: center;
+	color: rgba(255, 255, 255, 0.50);
+	background: #353B43;
+	box-shadow:
+			inset 1px 1px 1px rgba(90, 90, 90, 0.1),
+			inset -1px -1px 1px rgba(0, 0, 0, 0.1);
+	transition: all 0.5s;
+}
+
+.card .top_face p {
+	width: 100%;
+	user-select: none;
+	font-family: sans-serif;
+	font-size: 2rem;
+	text-align: center;
 }
 
 .card .bottom_face {
 	bottom: 0;
 	z-index: 0;
-	background: rgb(128, 89, 89);
-	transition: ease-in-out 0.5s;
+	background: rgb(255, 233, 211);
+	opacity: 0;
+	transition: all 0.5s;
+}
+
+.card .bottom_face p {
+	margin: 16px;
+	user-select: none;
+	font-family: sans-serif;
+	font-size: 1.2rem;
 }
 
 .card:hover .top_face {
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
+	color: rgb(255, 233, 211);
+	box-shadow:
+			inset 0 0 60px whitesmoke,
+			inset 20px 0 80px rgba(255, 0, 255, 0.50),
+			inset -20px 0 80px rgba(0, 255, 255, 0.70),
+			inset 20px 0 300px rgba(255, 0, 255, 0.50),
+			inset -20px 0 300px rgba(0, 255, 255, 0.70);
 }
 
 .card:hover .bottom_face {
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
+	opacity: 1;
 }
