--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,107 +1,77 @@
+/*.card, .container, .top_face, .bottom_face {*/
+/*	border: 1px solid black;*/
+/*}*/
 body {
-	background: #353B43;
+	background: #444;
 }
 
 .about_me {
 	position: absolute;
-	top: 300px;
-	left: 150px;
-	--HEIGHT: 200px;
-	--WIDTH: 300px;
-	height: var(--HEIGHT);
-	width: var(--WIDTH);
-	display: flex;
-	align-items: center;
-}
-
-.experience {
-	position: absolute;
-	top: 300px;
-	left: 500px;
-	--HEIGHT: 200px;
-	--WIDTH: 300px;
-	height: var(--HEIGHT);
-	width: var(--WIDTH);
-	display: flex;
-	align-items: center;
+	width: 300px;
+	height: 400px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .card {
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	border-radius: 16px;
-	box-shadow:
-			-4px -4px 10px rgba(100, 110, 130, 0.2),
-			4px 4px 10px rgba(50, 52, 58, 0.90);
-	transition: all 0.5s;
+	background: antiquewhite;
 }
 
-.card:hover {
-	height: 200%;
-	box-shadow:
-			0 0 50px rgba(255, 255, 255, 0.3),
-			10px 0 80px rgba(255, 0, 255, 0.2),
-			-10px 0 80px rgba(0, 255, 255, 0.3);
+.card > p {
+	position: absolute;
+	bottom: 0;
+}
+
+.container {
+	position: absolute;
+	width: 100%;
+	height: 60%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .card .face {
 	position: absolute;
-	height: var(--HEIGHT);
-	width: var(--WIDTH);
-	border-radius: 16px;
+	height: 100%;
+	width: 100%;
+	user-select: none;
 }
 
 .card .top_face {
-	top: 0;
 	z-index: 1;
-	display: flex;
-	align-items: center;
-	color: rgba(255, 255, 255, 0.50);
-	background: #353B43;
-	box-shadow:
-			inset 1px 1px 1px rgba(90, 90, 90, 0.1),
-			inset -1px -1px 1px rgba(0, 0, 0, 0.1);
-	transition: all 0.5s;
-}
-
-.card .top_face p {
-	width: 100%;
-	user-select: none;
+	background: #7a7a7a;
 	font-family: sans-serif;
-	font-size: 2rem;
-	text-align: center;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	transition: all 0.25s;
 }
 
 .card .bottom_face {
-	bottom: 0;
 	z-index: 0;
-	background: rgb(255, 233, 211);
-	opacity: 0;
-	transition: all 0.5s;
-}
-
-.card .bottom_face p {
-	margin: 16px;
-	user-select: none;
+	height: 30%;
+	width: 30%;
+	background: rgb(107, 139, 175);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	font-family: sans-serif;
-	font-size: 1.2rem;
+	font-size: 0;
+	opacity: 0;
+	transform: rotateY(180deg);
+	transition: all 0.75s;
 }
 
-.card:hover .top_face {
-	border-bottom-left-radius: 0;
-	border-bottom-right-radius: 0;
-	color: rgb(255, 233, 211);
-	box-shadow:
-			inset 0 0 60px whitesmoke,
-			inset 20px 0 80px rgba(255, 0, 255, 0.50),
-			inset -20px 0 80px rgba(0, 255, 255, 0.70),
-			inset 20px 0 300px rgba(255, 0, 255, 0.50),
-			inset -20px 0 300px rgba(0, 255, 255, 0.70);
-}
-
-.card:hover .bottom_face {
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
-	opacity: 1;
+.card .container:hover .bottom_face{
+	z-index: 10;
+	opacity: 0.8;
+	height: 100%;
+	width: 100%;
+	font-size: 1.5rem;
+	transform: rotateY(0deg);
 }
