--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,18 +39,23 @@ body {
 }
 
 .top-area .introduce_block {
+	/*border: 1px solid rgba(255, 255, 255, 0.5);*/
+	width: 1100px;
 	text-align: center;
 	z-index: 1;
 }
 
 .top-area .introduce_block h1 {
+	/*border: 1px solid rgba(255, 255, 255, 0.5);*/
 	color: rgba(255, 255, 255, 0.90);
 	font-size: 90px;
 	font-weight: normal;
+	margin: 0 0 36px 0;
 }
 
 .top-area .introduce_block p {
-	width: 70%;
+	/*border: 1px solid rgba(255, 255, 255, 0.5);*/
+	width: 100%;
 	color: rgba(255, 255, 255, 0.90);
 	font-size: 36px;
 	margin: auto;
@@ -70,20 +75,37 @@ body {
 }
 
 .nav_container {
-	border: 1px solid rgba(102, 215, 89, 0.5);
+	/*border: 1px solid rgba(102, 215, 89, 0.5);*/
+	position: relative;
 	display: flex;
-	margin-left: 20%;
-	margin-right: 20%;
-	width: 100%;
+	height: 100%;
+	margin: auto;
+	width: 1100px;
 }
 
 .navigation .logo {
+	/*border: 1px solid rgba(255, 0, 0, 0.5);*/
+	border-right: 4px solid rgba(255, 0, 0, 0.1);
 	display: flex;
-	width: 48px;
+	height: 100%;
+	width: 150px;
+}
+
+.navigation .logo a {
+	/*border: 1px solid rgb(255, 255, 255);*/
+	position: relative;
+	width: 100%;
+	display: flex;
 	justify-content: center;
 	align-items: center;
-	text-align: center;
-	margin: 0;
+}
+
+.navigation .logo:hover {
+	background: #292d33;
+}
+
+.navigation .logo img {
+	/*border: 1px solid rgba(255, 0, 0, 0.5);*/
 }
 
 .navigation .menu_section {
@@ -96,21 +118,32 @@ body {
 	/*border: 1px solid rgba(255, 213, 0, 0.5);*/
 	display: flex;
 	list-style: none;
-	margin: auto 8px auto auto;
-	padding: 5px;
+	margin: auto 8px auto 8px;
+	padding: 0;
 }
 
 .navigation .menu_section .menu li{
 	/*border: 1px solid rgba(255, 0, 0, 0.5);*/
 	padding-right: 20px;
 	padding-left: 20px;
+	transition: ease-in-out 0.25s;
 }
 
 .navigation .menu_section a {
+	/*border: 1px solid rgb(255, 255, 255);*/
 	text-decoration: none;
 	color: rgba(255, 255, 255, 0.80);
 	font-size: 1.2rem;
 	white-space: nowrap;
+	transition: color 0.25s;
+}
+
+.navigation .menu_section li:hover {
+	transform: scale(1.2);
+}
+
+.navigation .menu_section a:hover {
+	color: white;
 }
 
 
@@ -137,12 +170,71 @@ body {
 
 .about_me {
 	background: #31383d;
-	display: flex;
+	height: 730px;
 	width: 100%;
-	height: 75vh;
-	margin: 0;
 	z-index: 2;
 }
+
+.about_me .about_me_container {
+	/*border: 1px solid rgb(255, 255, 255);*/
+	position: absolute;
+	display: flex;
+	height: 60%;
+	width: 100%;
+	bottom: 50px;
+	align-items: center;
+	box-shadow: 10px 10px 20px 0 rgba(38, 43, 47, 0.3);
+	border-top: 1px solid rgba(38, 43, 47, 0.5);
+	border-left: 1px solid rgba(38, 43, 47, 0.5);
+}
+
+.about_me .about_me_description {
+	/*border: 1px solid rgb(255, 189, 100);*/
+	position: relative;
+	display: flex;
+	height: 100%;
+	width: 680px;
+	margin-left: 24px;
+}
+
+.about_me .about_me_description p {
+	margin: auto;
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.80);
+	font-size: 1.2rem;
+}
+
+.about_me .avatar_container {
+	/*border: 1px solid rgb(93, 141, 255);*/
+	position: relative;
+	height: 340px;
+	width: 300px;
+	margin: auto;
+	overflow: hidden;
+	box-shadow:
+			20px 20px 0 0 #31383d,
+			30px -30px 0 0 #31383d,
+			-30px 30px 0 0 #31383d,
+			30px 30px 0 0 rgba(255, 0, 0, 0.1),
+			-20px -20px 0 0 #31383d,
+			-30px 30px 0 0 #31383d,
+			30px -30px 0 0 #31383d,
+			-30px -30px 0 0 rgba(255, 0, 0, 0.1);
+}
+
+.about_me .avatar_container img {
+	opacity: 0.8;
+	height: 100%;
+	object-fit: cover;
+	transform: scale(1.3) translate(-20px, 20px);
+}
+
+
+
+
+
+
+
 
 .projects {
 	background: #394248;
