--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,21 +10,25 @@ html {
 	-webkit-font-smoothing: antialiased;
 	scroll-behavior: smooth;
 	font-family: "Courier New", sans-serif;
+	background: rgba(6, 21, 33, 0.85);
 }
 
 body {
-	background: rgba(6, 21, 33, 0.85);
 	padding: 0;
 	margin: 0;
+	opacity: 0;
+	transition: opacity 1s ease-in;
+	transition-delay: 0.5s;
 }
 
 .top-area {
 	position: relative;
 	display: flex;
-	height: 100vh;
+	height: 100vh;   /* ===================== */
 	background-size: cover;
 	justify-content: center;
 	align-items: center;
+	user-select: none;
 	z-index: -1;
 }
 
@@ -63,15 +67,18 @@ body {
 
 .navigation {
 	/*border: 1px solid rgba(89, 110, 215, 0.5);*/
+	/*opacity: 0.2;*/
 	position: sticky;
-	display: flex;
-	overflow: hidden;
+	display: block;
 	top: 0;
 	width: 100%;
 	height: 60px;
 	background: #1d2024;
-	margin: 0;
+	user-select: none;
 	z-index: 1000;
+	/*display: flex;*/
+	/*overflow: hidden;*/
+	/*margin: 0;*/
 }
 
 .nav_container {
@@ -89,6 +96,8 @@ body {
 	display: flex;
 	height: 100%;
 	width: 150px;
+	opacity: 0.8;
+	transition: ease-in-out 0.25s;
 }
 
 .navigation .logo a {
@@ -102,6 +111,7 @@ body {
 
 .navigation .logo:hover {
 	background: #292d33;
+	opacity: 1;
 }
 
 .navigation .logo img {
@@ -163,11 +173,6 @@ body {
 
 
 
-
-
-
-
-
 .about_me {
 	background: #31383d;
 	height: 730px;
@@ -194,7 +199,7 @@ body {
 	display: flex;
 	height: 100%;
 	width: 680px;
-	margin-left: 24px;
+	margin-left: 38px;
 }
 
 .about_me .about_me_description p {
