--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,22 @@
+/*============================================================*/
+/*               ========== CV As A Project ==========        */
+/*               ===== Author: Aleksey Nikolaev ======        */
+/*============================================================*/
+
+
+
+
 /** {*/
 /*	border: 1px solid black;*/
 /*}*/
 
 *, ::after, ::before {
 	box-sizing: border-box;
+}
+
+::selection {
+	color: white;
+	background: #1d2024;
 }
 
 html {
@@ -20,6 +33,10 @@ body {
 	transition: opacity 1s ease-in;
 	transition-delay: 0.5s;
 }
+
+/*============================================================*/
+/*========== TOP AREA                                         */
+/*============================================================*/
 
 .top-area {
 	position: relative;
@@ -65,6 +82,22 @@ body {
 	margin: auto;
 }
 
+/*============================================================*/
+/*========== NAVIGATION CONTAINER                             */
+/*============================================================*/
+.nav_container {
+	/*border: 1px solid rgba(102, 215, 89, 0.5); !* GREEN CONTAINER *!*/
+	position: relative;
+	display: flex;
+	height: 100%;
+	margin: auto;
+	width: 1100px;
+}
+
+/*============================================================*/
+/*========== NAVIGATION                                       */
+/*============================================================*/
+
 .navigation {
 	/*border: 1px solid rgba(89, 110, 215, 0.5);*/
 	/*opacity: 0.2;*/
@@ -79,15 +112,6 @@ body {
 	/*display: flex;*/
 	/*overflow: hidden;*/
 	/*margin: 0;*/
-}
-
-.nav_container {
-	/*border: 1px solid rgba(102, 215, 89, 0.5);*/
-	position: relative;
-	display: flex;
-	height: 100%;
-	margin: auto;
-	width: 1100px;
 }
 
 .navigation .logo {
@@ -156,28 +180,66 @@ body {
 	color: white;
 }
 
+/*============================================================*/
+/*========== CONTAINER LABEL                                  */
+/*============================================================*/
 
+/*.container_label.align_container_label *{*/
+/*	border: 1px solid rgb(173, 125, 125);*/
+/*}*/
 
+.container_label {
+	position: absolute;
+	height: 100px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
+.container_label .container_label_left {
+	height: 4px;
+	width: 100px;
+	transform: translateY(25%);
+	background: rgba(255, 0, 0, 0.1);
+}
 
+.container_label .container_label_center {
+	height: 100px;
+	margin-left: 20px;
+	margin-right: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
+.container_label .container_label_center p{
+	color: rgba(255, 255, 255, 0.80);
+	font-size: 36px;
+	white-space: nowrap;
+}
 
+.container_label .container_label_right {
+	height: 4px;
+	width: 100px;
+	transform: translateY(25%);
+	background: rgb(255, 0, 0, 0.1);
+}
 
-
-
-
-
-
-
-
-
-
+/*============================================================*/
+/*========== ABOUT ME                                         */
+/*============================================================*/
 
 .about_me {
 	background: #31383d;
 	height: 730px;
 	width: 100%;
 	z-index: 2;
+}
+
+.about_me .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 100px;
 }
 
 .about_me .about_me_container {
@@ -199,7 +261,7 @@ body {
 	display: flex;
 	height: 100%;
 	width: 680px;
-	margin-left: 38px;
+	margin-left: 24px;
 }
 
 .about_me .about_me_description p {
@@ -232,66 +294,105 @@ body {
 	height: 100%;
 	object-fit: cover;
 	transform: scale(1.3) translate(-20px, 20px);
+	transition: ease-in-out 0.5s;
 }
 
+.about_me .avatar_container:hover img {
+	transform: scale(1.32) translate(-21px, 22px);
+}
 
-
-
-
-
-
+/*============================================================*/
+/*========== PROJECTS                                         */
+/*============================================================*/
 
 .projects {
 	background: #394248;
-	display: flex;
+	height:1080px;
 	width: 100%;
-	height: 100vh;
-	margin: 0;
 	z-index: 3;
 }
 
+.projects .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 100px;
+}
+
+/*============================================================*/
+/*========== SKILLS                                           */
+/*============================================================*/
+
 .skills {
 	background: #31383d;
-	display: flex;
+	height:1080px;
 	width: 100%;
-	height: 100vh;
-	margin: 0;
 	z-index: 4;
 }
 
+.skills .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 100px;
+}
+
+/*============================================================*/
+/*==========  EXPERIENCE                                      */
+/*============================================================*/
+
 .experience {
 	background: #394248;
-	display: flex;
+	height:1080px;
 	width: 100%;
-	height: 100vh;
-	margin: 0;
 	z-index: 5;
 }
 
+.experience .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 100px;
+}
+
+/*============================================================*/
+/*==========  EDUCATION                                       */
+/*============================================================*/
+
 .education {
 	background: #31383d;
-	display: flex;
+	height:1080px;
 	width: 100%;
-	height: 100vh;
-	margin: 0;
 	z-index: 6;
 }
 
+.education .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 100px;
+}
+
+/*============================================================*/
+/*========== HOBBY                                            */
+/*============================================================*/
+
 .hobby {
 	background: #394248;
-	display: flex;
+	height:1080px;
 	width: 100%;
-	height: 100vh;
-	margin: 0;
 	z-index: 7;
 }
 
+.hobby .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 100px;
+}
+
+/*============================================================*/
+/*==========  CONTACTS                                        */
+/*============================================================*/
+
 .contacts {
-	border-top: 1px solid rgba(255, 255, 255, 0.20);
 	background: #31383d;
-	display: flex;
+	height: 500px;
 	width: 100%;
-	height: 30vh;
-	margin: 0;
 	z-index: 8;
+}
+
+.contacts .container_label {
+	/*border: 1px solid rgb(192, 192, 192);*/
+	top: 50px;
 }
