--- a/CSS/style.css
+++ b/CSS/style.css
@@ -232,14 +232,15 @@ body {
 
 .about_me {
 	background: #31383d;
-	height: 730px;
+	height: 700px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 2;
 }
 
 .about_me .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
-	top: 100px;
+	top: 60px;
 }
 
 .about_me .about_me_container {
@@ -274,7 +275,7 @@ body {
 .about_me .avatar_container {
 	/*border: 1px solid rgb(93, 141, 255);*/
 	position: relative;
-	height: 340px;
+	height: 78%;
 	width: 300px;
 	margin: auto;
 	overflow: hidden;
@@ -307,14 +308,79 @@ body {
 
 .projects {
 	background: #394248;
-	height:1080px;
+	height:1300px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 3;
 }
 
 .projects .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
-	top: 100px;
+	top: 60px;
+}
+
+.projects .projects_zone {
+	/*border: 1px solid rgb(255, 0, 0);*/
+	position: absolute;
+	width: 100%;
+	top: 220px;
+	bottom: 50px;
+	display: grid;
+	box-shadow: 10px 10px 20px 0 rgba(38, 43, 47, 0.3);
+	border-top: 1px solid rgba(38, 43, 47, 0.5);
+	border-left: 1px solid rgba(38, 43, 47, 0.5);
+}
+
+.projects .project_container {
+	/*border-bottom: 1px solid rgb(127, 182, 119);*/
+	position: relative;
+	height: 100%;
+	width: 100%;
+	display: flex;
+}
+
+.projects .project_container .project_image {
+	/*border: 1px solid rgb(93, 141, 255);*/
+	position: relative;
+	width: 60%;
+	margin: 0 24px 0 24px;
+	overflow: hidden;
+}
+
+.projects .project_container img {
+	opacity: 0.8;
+	height: 100%;
+	width: 100%;
+	object-fit: contain;
+	cursor: pointer;
+}
+
+.projects .project_container .project_description {
+	/*border: 1px solid rgb(255, 189, 100);*/
+	position: relative;
+	display: flex;
+	height: 100%;
+	width: 100%;
+	margin: 0 24px 0 24px;
+}
+
+.projects .project_container p {
+	/*border: 1px solid rgb(93, 141, 255);*/
+	margin: auto;
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.80);
+	font-size: 1.2rem;
+}
+
+.projects .project_container .project_image img:active {
+	opacity: 1;
+}
+
+.projects .project_container .project_image:active {
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(2);
+	z-index: 100;
 }
 
 /*============================================================*/
@@ -325,12 +391,13 @@ body {
 	background: #31383d;
 	height:1080px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 4;
 }
 
 .skills .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
-	top: 100px;
+	top: 60px;
 }
 
 /*============================================================*/
@@ -341,12 +408,13 @@ body {
 	background: #394248;
 	height:1080px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 5;
 }
 
 .experience .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
-	top: 100px;
+	top: 60px;
 }
 
 /*============================================================*/
@@ -357,12 +425,13 @@ body {
 	background: #31383d;
 	height:1080px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 6;
 }
 
 .education .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
-	top: 100px;
+	top: 60px;
 }
 
 /*============================================================*/
@@ -373,12 +442,13 @@ body {
 	background: #394248;
 	height:1080px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 7;
 }
 
 .hobby .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
-	top: 100px;
+	top: 60px;
 }
 
 /*============================================================*/
@@ -389,6 +459,7 @@ body {
 	background: #31383d;
 	height: 500px;
 	width: 100%;
+	scroll-margin-top: 55px;
 	z-index: 8;
 }
 
