--- a/CSS/style.css
+++ b/CSS/style.css
@@ -235,7 +235,7 @@ body {
 	height: 700px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 2;
+	z-index: 10;
 }
 
 .about_me .container_label {
@@ -262,7 +262,7 @@ body {
 	display: flex;
 	height: 100%;
 	width: 680px;
-	margin-left: 24px;
+	margin-left: 36px;
 }
 
 .about_me .about_me_description p {
@@ -276,7 +276,7 @@ body {
 	/*border: 1px solid rgb(93, 141, 255);*/
 	position: relative;
 	height: 78%;
-	width: 300px;
+	width: 290px;
 	margin: auto;
 	overflow: hidden;
 	box-shadow:
@@ -295,7 +295,7 @@ body {
 	height: 100%;
 	object-fit: cover;
 	transform: scale(1.3) translate(-20px, 20px);
-	transition: ease-in-out 0.5s;
+	transition: ease-in-out 0.25s;
 }
 
 .about_me .avatar_container:hover img {
@@ -311,7 +311,7 @@ body {
 	height:1300px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 3;
+	z-index: 20;
 }
 
 .projects .container_label {
@@ -337,22 +337,39 @@ body {
 	height: 100%;
 	width: 100%;
 	display: flex;
+	align-items: center;
 }
 
-.projects .project_container .project_image {
-	/*border: 1px solid rgb(93, 141, 255);*/
+.projects .project_container .project_image_check {
+	display: none;
+}
+
+.projects .project_container label {
+	/*border: 1px solid rgb(182, 60, 103);*/
 	position: relative;
 	width: 60%;
-	margin: 0 24px 0 24px;
-	overflow: hidden;
+	margin: 0 18px 0 36px;
+	z-index: 21;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.20);
+	transition:
+			translate 0.5s cubic-bezier(.5,0,.5,1),
+			scale 0.75s cubic-bezier(.5,0,.5,1),
+			box-shadow 1.25s,
+			z-index 1.25s;
+}
+
+.projects .project_container .project_image_check:checked + label {
+	scale: 3;
+	translate: 86%;
+	z-index: 100;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.50);
 }
 
 .projects .project_container img {
-	opacity: 0.8;
-	height: 100%;
+	/*border: 1px solid rgb(9, 255, 0);*/
 	width: 100%;
-	object-fit: contain;
 	cursor: pointer;
+	margin-bottom: -5px;
 }
 
 .projects .project_container .project_description {
@@ -361,7 +378,7 @@ body {
 	display: flex;
 	height: 100%;
 	width: 100%;
-	margin: 0 24px 0 24px;
+	margin: 0 24px 0 18px;
 }
 
 .projects .project_container p {
@@ -372,16 +389,14 @@ body {
 	font-size: 1.2rem;
 }
 
-.projects .project_container .project_image img:active {
-	opacity: 1;
-}
 
-.projects .project_container .project_image:active {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(2);
-	z-index: 100;
-}
+
+
+
+
+
+
+
 
 /*============================================================*/
 /*========== SKILLS                                           */
@@ -392,7 +407,7 @@ body {
 	height:1080px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 4;
+	z-index: 30;
 }
 
 .skills .container_label {
@@ -409,7 +424,7 @@ body {
 	height:1080px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 5;
+	z-index: 40;
 }
 
 .experience .container_label {
@@ -426,7 +441,7 @@ body {
 	height:1080px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 6;
+	z-index: 50;
 }
 
 .education .container_label {
@@ -443,7 +458,7 @@ body {
 	height:1080px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 7;
+	z-index: 60;
 }
 
 .hobby .container_label {
@@ -460,7 +475,7 @@ body {
 	height: 500px;
 	width: 100%;
 	scroll-margin-top: 55px;
-	z-index: 8;
+	z-index: 70;
 }
 
 .contacts .container_label {
