--- a/CSS/style.css
+++ b/CSS/style.css
@@ -252,9 +252,7 @@ body {
 	width: 100%;
 	bottom: 50px;
 	align-items: center;
-	box-shadow: 10px 10px 20px 0 rgba(38, 43, 47, 0.3);
-	border-top: 1px solid rgba(38, 43, 47, 0.5);
-	border-left: 1px solid rgba(38, 43, 47, 0.5);
+	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
 }
 
 .about_me .about_me_description {
@@ -327,9 +325,7 @@ body {
 	top: 220px;
 	bottom: 50px;
 	display: grid;
-	box-shadow: 10px 10px 20px 0 rgba(38, 43, 47, 0.3);
-	border-top: 1px solid rgba(38, 43, 47, 0.5);
-	border-left: 1px solid rgba(38, 43, 47, 0.5);
+	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
 }
 
 .projects .project_container {
@@ -390,15 +386,6 @@ body {
 	font-size: 1.2rem;
 }
 
-
-
-
-
-
-
-
-
-
 /*============================================================*/
 /*========== SKILLS                                           */
 /*============================================================*/
@@ -414,6 +401,96 @@ body {
 .skills .container_label {
 	/*border: 1px solid rgb(192, 192, 192);*/
 	top: 60px;
+}
+
+.skills .skills_container {
+	/*border: 1px solid rgb(255, 0, 0);*/
+	position: absolute;
+	top: 220px;
+	bottom: 50px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-flow: row wrap;
+	/*align-items: center;*/
+	/*align-items: stretch;*/
+	box-shadow: 5px 5px 20px rgba(20, 20, 20, 0.2);
+}
+
+.skills .skill_html,
+.skills .skill_css,
+.skills .skill_csharp,
+.skills .skill_cpp,
+.skills .skill_webstorm,
+.skills .skill_windows {
+	/*background: rgba(255, 226, 171, 0.13);*/
+	/*border: 1px solid black;*/
+	position: relative;
+	height: 150px;
+	width: 150px;
+	margin: 34px;
+}
+
+.skills .card {
+	/*border: 1px solid black;*/
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+	transition: box-shadow 0.2s ease-in-out;
+}
+
+.skills .card .card_top {
+	/*border: 1px solid #002aff;*/
+	/*background: #5f7886;*/
+	background: #31383d;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.skills .card .card_top .image_card_top {
+	/*border: 1px solid #ff0000;*/
+	position: absolute;
+	opacity: 0.1;
+	height: 100%;
+	transition: opacity 0.4s;
+}
+
+.skills .card .card_bottom {
+	/*border: 1px solid #ff0000;*/
+	position: absolute;
+	width: 150%;
+	top: 0;
+	opacity: 0;
+	transform: scale(0);
+	transition: all 0.2s;
+}
+
+.skills .card .card_bottom p {
+	margin: 4%;
+	color: rgba(255, 255, 255, 0.80);
+	font-size: 1.2rem;
+}
+
+.skills .card .card_top .image_card_top:hover,
+.skills .card .card_bottom:hover ~ .card_top .image_card_top {
+	opacity: 0.6;
+}
+
+.skills .card:hover {
+	box-shadow: 0 -10px 15px 0 rgba(0, 0, 0, 0.1);
+}
+
+.skills .card:hover > .card_bottom,
+.skills .card .card_bottom:hover {
+	opacity: 1;
+	top: 100%;
+	transform: scale(1);
 }
 
 /*============================================================*/
