--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,9 @@
 /*============================================================*/
+/*============================================================*/
 /*               ========== CV As A Project ==========        */
 /*               ===== Author: Aleksey Nikolaev ======        */
 /*============================================================*/
-
-
-
+/*============================================================*/
 
 /** {*/
 /*	border: 1px solid black;*/
@@ -46,6 +45,16 @@ body {
 	justify-content: center;
 	align-items: center;
 	user-select: none;
+}
+
+.parallax:before {
+	position: absolute;
+	content: '';
+	background: rgba(0, 0, 0, 0.6);
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 /*============================================================*/
@@ -461,16 +470,6 @@ body {
 	background-image: url('/content/second_backplane.jpg');
 }
 
-.middle-area_one:before {
-	position: absolute;
-	content: '';
-	background: rgba(0, 0, 0, 0.6);
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
 /*============================================================*/
 /*========== SKILLS                                           */
 /*============================================================*/
@@ -686,16 +685,6 @@ body {
 	background-image: url('/content/second_backplane.jpg');
 }
 
-.middle-area_two:before {
-	position: absolute;
-	content: '';
-	background: rgba(0, 0, 0, 0.6);
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
 /*============================================================*/
 /*==========  EDUCATION                                       */
 /*============================================================*/
@@ -832,21 +821,11 @@ body {
 }
 
 /*============================================================*/
-/*========== BOTTOM AREA                                           */
+/*========== BOTTOM AREA                                      */
 /*============================================================*/
 
 .bottom-area {
 	background-image: url('/content/third_backplane.jpg');
-}
-
-.bottom-area:before {
-	position: absolute;
-	content: '';
-	background: rgba(0, 0, 0, 0.2);
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
 }
 
 /*============================================================*/
